// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeForm renders default correctly 1`] = `
<div
  className="container  "
>
  <p
    className="description"
  >
    <b>
      Subscribe
    </b>
     to know whenever I post new content. I don't spam!
  </p>
  <form
    action="https://victorzhou.us20.list-manage.com/subscribe/post?SIGNUP=test"
    method="post"
    target="_blank"
  >
    <input
      name="u"
      type="hidden"
      value="7cd5089a9bbc5253e6890ae15"
    />
    <input
      name="id"
      type="hidden"
      value="9f367a1f47"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="MERGE0"
      placeholder="example@domain.com"
      size="25"
      type="email"
    />
    <br />
    <input
      name="submit"
      type="submit"
      value="SUBSCRIBE"
    />
  </form>
</div>
`;

exports[`SubscribeForm renders large correctly 1`] = `
<div
  className="container large "
>
  <p
    className="description"
  >
    <b>
      Subscribe
    </b>
     to know whenever I post new content. I don't spam!
  </p>
  <form
    action="https://victorzhou.us20.list-manage.com/subscribe/post?SIGNUP=test"
    method="post"
    target="_blank"
  >
    <input
      name="u"
      type="hidden"
      value="7cd5089a9bbc5253e6890ae15"
    />
    <input
      name="id"
      type="hidden"
      value="9f367a1f47"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="MERGE0"
      placeholder="example@domain.com"
      size="25"
      type="email"
    />
    <br />
    <input
      name="submit"
      type="submit"
      value="SUBSCRIBE"
    />
  </form>
</div>
`;
